Frontend refactoring and analyze fixes

--- a/nipype.cfg
+++ b/nipype.cfg
@@ -1,3 +1,8 @@
 [logging]
 workflow_level = ERROR
 interface_level = ERROR
+
+[execution]
+stop_on_first_crash = true
+crashfile_format = txt
+create_report = false
